Adjust the snapshot diffing to do just a structural comparison

--- a/Tests/RosalindTests/__Snapshots__/RosalindAcceptanceTests/apple_ios_app.1
+++ b/Tests/RosalindTests/__Snapshots__/RosalindAcceptanceTests/apple_ios_app.1
@@ -2,7 +2,7 @@
   "app" : {
     "children" : [
       {
-        "unknown" : {
+        "file" : {
           "children" : [
 
           ],
@@ -12,17 +12,17 @@
         }
       },
       {
-        "unknown" : {
+        "file" : {
           "children" : [
 
           ],
           "path" : "App.debug.dylib",
-          "shasum" : "b11bda67d3694ce1a7cce2fba12a7a737f4e6184f78c6c391e261483649fae21",
+          "shasum" : "98ce4e52b3deb16aebeb282595a8595318f47b21851cfb22d5a549f80e18b433",
           "size" : 126488
         }
       },
       {
-        "unknown" : {
+        "file" : {
           "children" : [
 
           ],
@@ -32,7 +32,7 @@
         }
       },
       {
-        "unknown" : {
+        "file" : {
           "children" : [
 
           ],
@@ -42,7 +42,7 @@
         }
       },
       {
-        "unknown" : {
+        "file" : {
           "children" : [
 
           ],
@@ -53,7 +53,7 @@
       }
     ],
     "path" : ".",
-    "shasum" : "d8a4a603a9958dc8245477dd89d0dca6bb0c34c2cb3cf40a30f6637ea069b88f",
+    "shasum" : "3e8700bafe3320d6e0cebac9b4201bf2d1ea95cc61a75a3b1010cbc05483aa12",
     "size" : 215081
   }
 }
