feat: add distinction between download and install size

--- a/Tests/RosalindTests/__Snapshots__/RosalindAcceptanceTests/ios_app.1
+++ b/Tests/RosalindTests/__Snapshots__/RosalindAcceptanceTests/ios_app.1
@@ -32,10 +32,10 @@
     }
   ],
   "bundleId" : "dev.tuist.rosalind.App",
+  "installSize" : 214801,
   "name" : "App",
   "platforms" : [
     "iPhoneOS"
   ],
-  "size" : 214801,
   "version" : "1.0"
 }
