--- a/Tests/RosalindTests/__Snapshots__/RosalindAcceptanceTests/ios_app_ipa.1
+++ b/Tests/RosalindTests/__Snapshots__/RosalindAcceptanceTests/ios_app_ipa.1
@@ -40,10 +40,11 @@
     }
   ],
   "bundleId" : "dev.tuist.rosalind.App",
+  "downloadSize" : 23086,
+  "installSize" : 115517,
   "name" : "App",
   "platforms" : [
     "iPhoneOS"
   ],
-  "size" : 115517,
   "version" : "1.0"
 }
