feat: support for recognizing car as asset and parsing its contents

--- a/Tests/RosalindTests/__Snapshots__/RosalindAcceptanceTests/ios_app.1
+++ b/Tests/RosalindTests/__Snapshots__/RosalindAcceptanceTests/ios_app.1
@@ -3,20 +3,46 @@
     {
       "artifactType" : "binary",
       "path" : "App.app\/App",
-      "shasum" : "78c029c60a7fc96d103409024a31a65f64db44eedce46436bec6e307e6d74b76",
-      "size" : 70880
+      "shasum" : "3317dd834f446547065042f12c9a953dd61bf6007f53b2da8bfb9d48906f23d6",
+      "size" : 91520
     },
     {
       "artifactType" : "binary",
       "path" : "App.app\/App.debug.dylib",
-      "shasum" : "a42edc12761b7702c00ee551aff2bc49981073bd567b69328ffc31c8bfa67542",
-      "size" : 126208
+      "shasum" : "5a1f7e4e7ce91c23a024d8776e95e86c0ad71d48df8cff239220f7589f89d49d",
+      "size" : 146880
+    },
+    {
+      "artifactType" : "asset",
+      "children" : [
+        {
+          "artifactType" : "asset",
+          "path" : "Tuist-Filled.png\/Assets.car",
+          "shasum" : "880c0fec121c36e2fe248e730234ccd6cdea5bbe46dea6c132d7c9bfb6a4e32b",
+          "size" : 699
+        },
+        {
+          "artifactType" : "asset",
+          "path" : "Tuist-Filled@2x.png\/Assets.car",
+          "shasum" : "62618f6f558cd57f6ecd5a3171324b2328ba44df7f13fda31cee214bc9ba2b10",
+          "size" : 1370
+        },
+        {
+          "artifactType" : "asset",
+          "path" : "Tuist-Filled@3x.png\/Assets.car",
+          "shasum" : "3171a380ea518c7de3fd35a0cb5a5dcb47d9df2bb72a2c7d75f48762dbda6463",
+          "size" : 2033
+        }
+      ],
+      "path" : "App.app\/Assets.car",
+      "shasum" : "9bab6256f2842bbe1e55116e3dc95a5be7c8cbf679ea9d593c871ee3ba97d52b",
+      "size" : 26175
     },
     {
       "artifactType" : "file",
       "path" : "App.app\/Info.plist",
-      "shasum" : "933e181f5ddf24c0165d942f851b5acfc1af24ff43757787ec80a9a23ad77f34",
-      "size" : 1241
+      "shasum" : "8c649d8b1680706da7c41b250849f5fa8f3faa7c39ae3083f9ef8d40ea04abe0",
+      "size" : 1246
     },
     {
       "artifactType" : "file",
@@ -25,14 +51,34 @@
       "size" : 8
     },
     {
+      "artifactType" : "directory",
+      "children" : [
+        {
+          "artifactType" : "file",
+          "path" : "App.app\/_CodeSignature\/CodeResources",
+          "shasum" : "2434d1efbebaceaf3a7718beb9a2a0777840a6e8d5042db8b17d123141df4879",
+          "size" : 2749
+        }
+      ],
+      "path" : "App.app\/_CodeSignature",
+      "shasum" : "37cc25d3eff8466abed46755183e96e3202702bb6669f9d21b3c5655e3a7e9b7",
+      "size" : 2749
+    },
+    {
       "artifactType" : "binary",
       "path" : "App.app\/__preview.dylib",
-      "shasum" : "537e6fa5ef09aafaa90e929cdc259b90277444f09fc645a9429a7b8bfba377cb",
-      "size" : 16464
+      "shasum" : "8aa3f10d52b0596b5de2668b3d3620378ec41b1a51cf732fe60695dcbb9e2c2f",
+      "size" : 35024
+    },
+    {
+      "artifactType" : "file",
+      "path" : "App.app\/embedded.mobileprovision",
+      "shasum" : "c1f9bf606f548105625f57e1e9011f47d5f33d2309a30f7b50a38fe81522640f",
+      "size" : 18493
     }
   ],
   "bundleId" : "dev.tuist.rosalind.App",
-  "installSize" : 214801,
+  "installSize" : 322095,
   "name" : "App",
   "platforms" : [
     "iPhoneOS"
