--- a/Tests/RosalindTests/__Snapshots__/RosalindAcceptanceTests/ios_app_ipa.1
+++ b/Tests/RosalindTests/__Snapshots__/RosalindAcceptanceTests/ios_app_ipa.1
@@ -3,14 +3,40 @@
     {
       "artifactType" : "binary",
       "path" : "App.app\/App",
-      "shasum" : "ece5e4e37f0714dd4e2d972263011f57cef55bdbfa1e102b4730e77df9dff3fd",
-      "size" : 93664
+      "shasum" : "b9ed48c2cf99b440f6b08c1a0c2a151a581b5d0801332a1487f6594ed6fd94a5",
+      "size" : 93600
+    },
+    {
+      "artifactType" : "asset",
+      "children" : [
+        {
+          "artifactType" : "asset",
+          "path" : "Tuist-Filled.png\/Assets.car",
+          "shasum" : "880c0fec121c36e2fe248e730234ccd6cdea5bbe46dea6c132d7c9bfb6a4e32b",
+          "size" : 699
+        },
+        {
+          "artifactType" : "asset",
+          "path" : "Tuist-Filled@2x.png\/Assets.car",
+          "shasum" : "62618f6f558cd57f6ecd5a3171324b2328ba44df7f13fda31cee214bc9ba2b10",
+          "size" : 1370
+        },
+        {
+          "artifactType" : "asset",
+          "path" : "Tuist-Filled@3x.png\/Assets.car",
+          "shasum" : "3171a380ea518c7de3fd35a0cb5a5dcb47d9df2bb72a2c7d75f48762dbda6463",
+          "size" : 2033
+        }
+      ],
+      "path" : "App.app\/Assets.car",
+      "shasum" : "9bab6256f2842bbe1e55116e3dc95a5be7c8cbf679ea9d593c871ee3ba97d52b",
+      "size" : 26175
     },
     {
       "artifactType" : "file",
       "path" : "App.app\/Info.plist",
-      "shasum" : "933e181f5ddf24c0165d942f851b5acfc1af24ff43757787ec80a9a23ad77f34",
-      "size" : 1241
+      "shasum" : "8c649d8b1680706da7c41b250849f5fa8f3faa7c39ae3083f9ef8d40ea04abe0",
+      "size" : 1246
     },
     {
       "artifactType" : "file",
@@ -24,13 +50,13 @@
         {
           "artifactType" : "file",
           "path" : "App.app\/_CodeSignature\/CodeResources",
-          "shasum" : "34f9e81912a8a95a5c804ab129f572575893b6dfcaf6fdaf41826d0beda505b4",
-          "size" : 2111
+          "shasum" : "430f792abd6a987126b4eb5aa267528e23040fdfaf27856d08a547b2dacc4461",
+          "size" : 2317
         }
       ],
       "path" : "App.app\/_CodeSignature",
-      "shasum" : "b9b1a346bec9efa7921824c97ec61f69e2b07de669fbda13e713ceb89f58343f",
-      "size" : 2111
+      "shasum" : "4cc29bd23aa69892a00a6a668566fa8fac7af5f14a1d6bcca55084206e9567b3",
+      "size" : 2317
     },
     {
       "artifactType" : "file",
@@ -40,8 +66,8 @@
     }
   ],
   "bundleId" : "dev.tuist.rosalind.App",
-  "downloadSize" : 23086,
-  "installSize" : 115517,
+  "downloadSize" : 27193,
+  "installSize" : 141839,
   "name" : "App",
   "platforms" : [
     "iPhoneOS"
